# NX_ONVIF

./: CMakeLists.txt  README.md
common/includes/: deepstream_common.h
config/: config.yaml  filters.yaml  pgie_config.txt
modules/phone/: config_infer_primary.txt  phone.txt
modules/test/: phone.txt
modules/test/dustbin/: dustbin.txt  dustbin_infer.txt
onvifDs/: CMakeLists.txt
onvifDs/c_files/: cbase64.c
onvifDs/cpp_files/: Config_Parser.cpp  FoundOnvifDevices.cpp  HttpReq.cpp  config.yaml  filters.cpp  probesoap.cpp  utils.cpp  wsse_onvif.cpp
onvifDs/docs/: config_infer_primary.txt  rubbish.txt  soap注释.txt
onvifDs/h_files/: Config_Parser.h  FoundOnvifDevices.h  HttpReq.h  SimpleIni.h  cbase64.h  csha1.h  filters.h  probesoap.h  soap.h  utils.h  wsse_onvif.h
onvifDs/models/dustbin/: dustbin.txt
onvifDs/models/phone/: config_infer_primary.txt  phone.txt
onvifDs/models/test/dustbin/: labels.txt
src/: ConfigParser.cpp  ConfigParser.h  OnvifUriFilter.cpp  OnvifUriFilter.h  main.cpp
